# Lux

./: .gitignore  .gitmodules  CMakeLists.txt  Projects of my life.lnk  README.md
CMakeScripts/: slang-setup.cmake
headers/asset/: asset_manager.h  asset_storage.h  asset_types.h  model_importer.h
headers/base/: application.h  core.h  window.h
headers/base/core/: buffer.h  buffer_types.h  descriptor.h  engine_base.h  frame_manager.h  image.h  image_types.h  pipeline.h  pipeline_types.h  presentation_manager.h  renderer.h  rendererAPI.h
headers/base/core/raytracing/: RT_acceleration_structure.h  RT_base.h  RT_pipeline.h  shader_binding_table.h
headers/base/gfx/: vk_allocator.h  vk_base.h  vk_buffer.h  vk_command_buffer.h  vk_deleter.h  vk_descriptor.h  vk_device.h  vk_frame.h  vk_image.h  vk_instance.h  vk_pipeline.h  vk_presentation.h  vk_renderer.h  vk_shader.h
headers/base/gfx/raytracing/: vk_acceleration_structure.h  vk_rt_pipeline.h
headers/constructed_types/: blas_container.h  device_indexed_buffer.h  device_indirect_buffer.h
headers/scene/: RT_scene_renderer.h  camera.h  component.h  entity.h  iscene_renderer.h  lights.h  scene_base.h  scene_manager.h  scene_renderer.h  scene_storage.h
headers/util/: camera_types.h  constants.h  helpers.h  logger.h  math_helpers.h  rt_types.h  util.h
headers/util/gfx/: vk_defines.h  vk_helpers.h  vk_types.h
resources/models/Sponza/: Sponza.gltf
resources/models/Wall2/: scene.gltf
resources/shaders/: PBR-shading.slang  PBR_shading.frag  RT-lights.slang  g-pass.frag  g-pass.slang  g-pass.vert  light-cull.comp  light-cull.slang  light_cull.comp  mask-pass.slang  opaque-pass.slang  raytracing.slang  shading.frag  shading.vert  slangdconfig.json
resources/shaders/common/: PBR-common.slang  RT-common.slang  RT-input.slang  camera.slang  common.slang  g-pass.slang  lights.slang  mesh-common.slang  random.slang  sampler.slang
src/: main.cpp
src/asset/: asset_manager.cpp  asset_storage.cpp  model_importer.cpp
src/base/: application.cpp  core.cpp  window.cpp
src/base/core/: buffer.cpp  descriptor.cpp  engine_base.cpp  frame_manager.cpp  image.cpp  pipeline.cpp  presentation_manager.cpp  renderer.cpp
src/base/core/raytracing/: RT_base.cpp  shader_binding_table.cpp  shader_bindng_table.cpp
src/base/gfx/: vk_allocator.cpp  vk_base.cpp  vk_buffer.cpp  vk_command_buffer.cpp  vk_deleter.cpp  vk_descriptor.cpp  vk_device.cpp  vk_frame.cpp  vk_image.cpp  vk_instance.cpp  vk_pipeline.cpp  vk_presentation.cpp  vk_renderer.cpp  vk_shader.cpp
src/base/gfx/raytracing/: vk_acceleration_structure.cpp  vk_rt_pipeline.cpp
src/scene/: RT_scene_renderer.cpp  camera.cpp  scene_base.cpp  scene_manager.cpp  scene_renderer.cpp  scene_storage.cpp
src/util/: logger.cpp  math_helpers.cpp
src/util/gfx/: vk_helpers.cpp
